--- a/src/resources/views/editUser.hbs
+++ b/src/resources/views/editUser.hbs
@@ -28,10 +28,10 @@
                 <img class="img-fluid" src="../img/about/info-img.jpg" alt="">
             </div>
             <div class="col-lg-6 info-right">
-                <form action="#" id="form-update">
+                <form action="" id="form-update" method="POST">
                     <div class="mt-20">
                         <h6 class="typo-list">Tên</h6>
-                        <input type="text" value="{{user.user_name}}" name="user_name" placeholder="Tên" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Tên'" required class="single-input">
+                        <input type="text" value="{{user.name}}" name="name" placeholder="Tên" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Tên'" required class="single-input">
                     </div>
 
                     <div class="mt-20">
@@ -41,31 +41,9 @@
 
                     <div class="mt-20">
                         <h6 class="typo-list">Số điện thoại</h6>
-                        <input type="text" value="{{user.phone_number}}" name="phone_number" placeholder="Số điện thoại" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Số điện thoại'" required class="single-input">
+                        <input type="text" value="{{user.phone}}" name="phone" placeholder="Số điện thoại" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Số điện thoại'" class="single-input">
                     </div>
 
-                    <div class="mt-20">
-                        <h6 class="typo-list">Ngày sinh</h6>
-                        <input type="date" value="{{user.date_of_birth}}" name="date_of_birth" placeholder="Số điện thoại" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Số điện thoại'" required class="single-input">
-                    </div>
-
-                    <div class="mt-20">
-                        <h6 class="typo-list">Địa chỉ</h6>
-                        <input type="text" value="{{user.address}}" name="address" placeholder="Địa chỉ" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Địa chỉ'" required class="single-input">
-                    </div>
-
-                    <div class="mt-20">
-                        <h6 class="typo-list">Giới tính</h6>
-                        <div class="input-group-icon mt-10 form-control pt-0 pb-0">
-                            <div class="form-select" id="default-select">
-                                <select name="gender">
-                                    <option>Nam</option>
-                                    <option>Nữ</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    
                     <div class="button-group-area mt-30">
                         <button type="submit" id="btn-update" class="genric-btn primary circle">Cập nhật</button>
                     </div>
@@ -78,38 +56,25 @@
 
 <script>
     document.addEventListener('DOMContentLoaded', function(){
-        const homeLink = document.getElementById('home-link');
-        homeLink.href = window.location.origin + '/home';
-
-        const userLink = document.getElementById('user-link');
-        userLink.href = window.location.origin + '/user';
-
-        const aboutLink = document.getElementById('about-link');
-        aboutLink.href = window.location.origin + '/about';
-
-        const blogLink = document.getElementById('blog-link');
-        blogLink.href = window.location.origin + '/blog';
-
-        const loginLink = document.getElementById('login-link');
-        loginLink.href = window.location.origin + '/login';
-
-
         $('#btn-update').on('click', function(event){
-            event.preventDefault()
+            event.preventDefault();
             $.ajax({
                 url: '',
                 method: 'post',
                 data: $('#form-update').serialize(),
                 success: function (res) {
-                    if (res) {
-                        alert(res)
-                        window.location.href = '/user/edit'
+                    if (res.err) {
+                        showToast(res.message, "error");
                     }
                     else {
-                        alert('Cập nhật thành công')
+                        showToast(res);
+                        setTimeout(() => {
+                            window.location.href = "/user";
+                        }, 1000)
                     }
                 }
             })
+            
         })
     })
 </script>
