--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -26,10 +26,10 @@
       </div>
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li><a id="home-link" href="home">Home</a></li>
-          <li><a id="about-link" href="about">About</a></li>
-          <li><a id="blog-link" href="blog">Blog</a></li>
-          <li><a id="user-link" href="user">User</a></li>
+          <li><a id="home-link" href="/home">Home</a></li>
+          <li><a id="about-link" href="/about">About</a></li>
+          <li><a id="blog-link" href="/blog">Blog</a></li>
+          <li><a id="user-link" href="/user">User</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
