--- a/src/resources/views/editUser.hbs
+++ b/src/resources/views/editUser.hbs
@@ -8,9 +8,9 @@
                 Chỉnh sửa thông tin cá nhân				
             </h1>	
             <p class="text-white link-nav">
-                <a href="../home">Home </a> 
+                <a href="/home">Home </a> 
                 <span class="lnr lnr-arrow-right"></span> 
-                <a href="../User">User</a>
+                <a href="/User">User</a>
                 <span class="lnr lnr-arrow-right"></span> 
                 <a href="">User Details</a>
             </p>
