search flights update

--- a/src/resources/views/checkout.hbs
+++ b/src/resources/views/checkout.hbs
@@ -5,17 +5,8 @@
         <div class="row d-flex align-items-center justify-content-center">
             <div class="about-content col-lg-12">
                 <h1 class="text-white">
-                    Chọn ghế			
+                    Xác nhận đặt vé			
                 </h1>	
-                <p class="text-white link-nav"> 
-                    Chọn chuyến bay
-                    <span class="lnr lnr-arrow-right"></span> 
-                    Hành khách 
-                    <span class="lnr lnr-arrow-right"></span> 
-                    <b>Chọn ghế</b>
-                    <span class="lnr lnr-arrow-right"></span> 
-                    Thanh toán
-                </p>
             </div>	
         </div>
     </div>
