--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -10,9 +10,9 @@
           Phục vụ bạn bằng sự tận tình của chúng tôi, kèm theo nhiều ưu đãi cho
           những giây phút thư giãn trên các chuyến bay
         </p>
-        <a href="#" class="primary-btn text-uppercase">Bắt đầu</a>
+        <a href="#find-flight" class="primary-btn text-uppercase">Bắt đầu</a>
       </div>
-      <div class="col-lg-4 col-md-6 banner-right" style="margin-top:6rem">
+      <div  class="col-lg-4 col-md-6 banner-right" style="margin-top:6rem">
         <div class="tab-content" id="myTabContent">
           <div
             class="tab-pane fade show active"
